Changed 'unique' to 'distinct' atoms

--- a/main_result.tex
+++ b/main_result.tex
@@ -6,7 +6,7 @@ We now present the main result of this thesis: Three procedures for obtaining we
 
 %----------------------------------------------
 \begin{theorem}\label{theorem:WeakStreamlining}
-Given a derivation $\Phi$ and unique and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$,
+Given a derivation $\Phi$, and distinct and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$,
 \begin{itemize}
 \item let
 \begin{itemize}
