--- a/main_result.tex
+++ b/main_result.tex
@@ -16,12 +16,12 @@ Given a derivation $\Phi$, and distinct and pairwise non-dual atoms $a_1$, $\dot
 then
 \begin{itemize}
 \item $\Phi''$ is weakly streamlined, and
-\item the size of $\Phi''$ depends at most exponentially on the size of\/ $\Phi$;
+\item the size of $\Phi''$ depends at most exponentially on the size of\/ $\Phi$; and
 \end{itemize}
 \item let\/ $\Phi'=\PB(\dots\PB(\Phi,a_1),\dots,a_n)$, then
 \begin{itemize}
 \item $\Phi'$ is weakly streamlined, and
-\item the size of\/ $\Phi'$ depends at most exponentially on the size of\/ $\Phi$; and
+\item the size of\/ $\Phi'$ depends at most exponentially on the size of\/ $\Phi$.
 \end{itemize}
 \end{itemize}
 \end{theorem}
@@ -30,3 +30,4 @@ then
 The statements follow by Proposition~\vref{proposition:Simplifier}, Proposition~\vref{proposition:IsolatedSubflowRemover}, Proposition~\vref{proposition:PathBreaker} and Proposition~\vref{proposition:QuasipolynomialMultipleIsolatedSubflowRemover}.
 \end{proof}
 %----------
+
