--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -146,7 +146,7 @@ Reduction $\to_\frpb$ is sound; moreover, if\/ $\Phi\to_\frpb\Psi$, then the siz
 \begin{proof}
 Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frpb\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\vref{definition:PathBreaker}.
 
-Since the evidenced interaction and cut vertices belong to the same connected component, we assume, by Convention~\vref{convention:AlternativeAiDecomposedForm}, that the following derivation is an $\ai$-decomposed form of $\Phi$:
+Since the evidenced interaction and cut vertices belong to the same connected component, we can construct, by Theorem~\vref{theorem:aiDecomposedForm} and Convention~\vref{convention:AlternativeAiDecomposedForm}, the following $\ai$-decomposed form of $\Phi$, whose size depends at most cubically on $\Phi$:
 \[
 \vlder{\Phi'}{}
 {
@@ -247,7 +247,7 @@ $}
  } 
 }\qquad.
 \]
-We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$ by \newline Theorem~\vref{theorem:aiDecomposedForm}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Lemma~\vref{lemma:GenericContraction}, so $\Psi$ depends polynomially on the size of $\Phi$.
+We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$, and we know, by Lemma~\vref{lemma:GenericContraction}, that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and the size of $\beta$. Hence, the size of $\Psi$ depends at most polynomially on the size of $\Phi$.
 \end{proof}
 %----------
 
